compiler/lume_parser/src/snapshots/lume_parser__tests__range_snapshots@expr_exclusive.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_expr(\"let _ = (a..b);\")"
---
[
    VariableDeclaration(
        VariableDeclaration {
            name: Identifier {
                name: "_",
                location: Location(
                    4..5,
                ),
            },
            variable_type: None,
            value: Range(
                Range {
                    lower: Variable(
                        Variable {
                            name: Identifier {
                                name: "a",
                                location: Location(
                                    9..10,
                                ),
                            },
                        },
                    ),
                    upper: Variable(
                        Variable {
                            name: Identifier {
                                name: "b",
                                location: Location(
                                    12..13,
                                ),
                            },
                        },
                    ),
                    inclusive: false,
                    location: Location(
                        9..13,
                    ),
                },
            ),
            location: Location(
                0..15,
            ),
        },
    ),
]
