compiler/lume_parser/src/snapshots/lume_parser__tests__return_snapshots@call.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(Target :: Statement, \"return a.b(c);\")"
---
SOURCE_FILE@0..14
  RETURN_STMT@0..14
    RETURN_KW@0..6 "return"
    WHITESPACE@6..7 " "
    INSTANCE_CALL_EXPR@7..13
      VARIABLE_EXPR@7..8
        NAME@7..8
          IDENT@7..8 "a"
      DOT@8..9 "."
      NAME@9..10
        IDENT@9..10 "b"
      ARG_LIST@10..13
        LEFT_PAREN@10..11 "("
        VARIABLE_EXPR@11..12
          NAME@11..12
            IDENT@11..12 "c"
        RIGHT_PAREN@12..13 ")"
    SEMICOLON@13..14 ";"
