compiler/lume_parser/src/snapshots/lume_parser__tests__self_snapshots@self_binary_op.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_expr(\"self + self\")"
---
[
    Expression(
        Call(
            Call {
                callee: Some(
                    Variable(
                        Variable {
                            name: Identifier {
                                name: "self",
                                location: Location(
                                    0..4,
                                ),
                            },
                        },
                    ),
                ),
                name: Path {
                    name: Identifier {
                        name: "+",
                        location: Location(
                            5..6,
                        ),
                    },
                    root: NamespacePath {
                        path: [],
                        location: Location(
                            0..0,
                        ),
                    },
                    location: Location(
                        5..6,
                    ),
                },
                arguments: [
                    Variable(
                        Variable {
                            name: Identifier {
                                name: "self",
                                location: Location(
                                    7..11,
                                ),
                            },
                        },
                    ),
                ],
                type_arguments: [],
                location: Location(
                    0..7,
                ),
            },
        ),
    ),
]
